# ProjetIntegrateur

./: .gitignore  README.md
Cellpose-SAM/: pyproject.toml
ProjetInte/: IOU.ipynb  Mask-R-CNN.ipynb  cellpose3.ipynb  pyproject.toml  roann.py  sam.ipynb  test.ipynb
stardist/: main.ipynb  pyproject.toml
